2000-12-12  Miles Bader  <miles@gnu.org>

	* simple.el (delete-horizontal-space): Add BACKWARD-ONLY parameter.
	Respect field end too.
	(just-one-space): Respect fields as `delete-horizontal-space'.
	(newline-and-indent, reindent-then-newline-and-indent): Use
	`delete-horizontal-space'.

2000-12-11  Stefan Monnier  <monnier@cs.yale.edu>

	* newcomment.el (comment-indent-new-line): Use delete-horizontal-space
	(so as to obey the field property in the minibuffer).

	* obsolete/c-mode.el: Moved from lisp/progmodes.
	* obsolete/auto-show.el: Moved from lisp.
	* obsolete/ooutline.el: Moved from lisp/textmodes.
	
2000-12-11  Carsten Dominik  <dominik@strw.leidenuniv.nl>

	* progmodes/idlwave.el: Updated to IDLWAVE version 4.7.  Too many
 	changes to list them here.

	* progmodes/idlw-shell.el: Updated to IDLWAVE version 4.7.  Too
	many changes to list them here.

	* progmodes/idlw-rinfo.el: Updated to IDLWAVE version 4.7.  Too
	many changes to list them here.

	* progmodes/idlw-toolbar.el: Updated to IDLWAVE version 4.7.

2000-12-11  Gerd Moellmann  <gerd@gnu.org>

	* simple.el (kill-new): Don't try to setcar kill-ring if it is
	nil.

	* cus-edit.el (custom-save-variables, custom-save-faces): 
	Comment fix.

	* hscroll.el: Moved to `obsolete' subdir.

2000-12-11  Miles Bader  <miles@gnu.org>

	* window.el (window-text-height): Function removed (now in C).

2000-12-10  Stefan Monnier  <monnier@cs.yale.edu>

	* log-edit.el (log-edit-parent-buffer): New var.
	(log-edit): Set it.  Add BUFFER argument.
	(log-edit-done): Use char-before.
	Don't bother checking validity of vc-comment-ring.
	Only bury the buffer if log-edit popped it up.

	* pcvs.el: Update references to CVS-Edit (now Log-Edit).
	(cvs-mode-diff-help): Remove.
	(cvs-mode-commit): Use the new `log-edit' BUFFER argument.
	(cvs-mode-marked): Set up the default for CMD manually.

	* pcvs-defs.el (cvs-mode-diff-map): Use minibuffer menu prompt.
	Remove binding for ? now made unnecessary.
