@@ -160,6 +160,9 @@
       (load "international/ccl") ; for cpNNN coding systems in codepage.el
       (load "international/codepage")	; internal.el uses cpNNN coding systems
       (load "disp-table"))) ; needed to setup ibm-pc char set, see internal.el
+(if (eq system-type 'macos)
+    (progn
+      (load "ls-lisp")))
 (if (fboundp 'atan)	; preload some constants and
     (progn		; floating pt. functions if we have float support.
       (load "float-sup")))
